--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,13 @@
   "jest.virtualFolders": [
     {
       "name": "unit-tests",
-      "jestCommandLine": "jest -c test/unit/jest.unit.config.js"
+      "rootPath": "test/unit",
+      "jestCommandLine": "cd ../../ && jest -c test/unit/jest.unit.config.js" // this is needed to be done like this in order to keep right setup in testing extension in vsc and to be able to use coverage option
     },
     {
       "name": "integration-tests",
-      "jestCommandLine": "jest -c test/integration/jest.int.config.js"
+      "rootPath": "test/integration",
+      "jestCommandLine": "cd ../../ && jest -c test/integration/jest.int.config.js" // as above
     },
     { "name": "example-tests", "rootPath": "examples/test" },
     {
