--- a/examples/package.json
+++ b/examples/package.json
@@ -11,23 +11,23 @@
     "test": "npm run lint && NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest",
     "build": "tsc",
     "run-ts": "node --no-warnings --loader ts-node/esm",
-    "text_generation": "npm run build && run-ts ./src/sdk/example_list_models_and_generate_text.ts && run-ts ./src/sdk/example_tokenize_input.ts",
-    "embeddings": "npm run build && run-ts ./src/sdk/example_generate_embeddings.ts",
-    "prompt_tuning": "npm run build && run-ts ./src/sdk/example_prompt_tuning.ts && run-ts ./src/sdk/example_prompt_generate_text.ts && run-ts ./src/sdk/example_prompt_generate_stream_text.ts",
-    "chat": "npm run build && run-ts ./src/sdk/example_chat.ts && run-ts ./src/sdk/example_chat_image.ts && run-ts ./src/sdk/example_chat_stream.ts && run-ts ./src/sdk/example_chat_tools.ts",
-    "ilab": "npm run build && run-ts ./src/sdk/example_instruct_lab.ts",
-    "rerank": "npm run build && npm run run-ts ./src/sdk/example_rerank.ts",
+    "text_generation": "npm run build && npm run run-ts ./src/sdk/example_list_models_and_generate_text.ts && npm run run-ts ./src/sdk/example_tokenize_input.ts",
+    "embeddings": "npm run build && npm run run-ts ./src/sdk/example_generate_embeddings.ts",
+    "prompt_tuning": "npm run build && npm run run-ts ./src/sdk/example_prompt_tuning.ts && npm run run-ts ./src/sdk/example_prompt_generate_text.ts && npm run run-ts ./src/sdk/example_prompt_generate_stream_text.ts",
+    "chat": "npm run build && npm run run-ts ./src/sdk/example_chat.ts && npm run run-ts ./src/sdk/example_chat_image.ts && npm run run-ts ./src/sdk/example_chat_stream.ts && npm run run-ts ./src/sdk/example_chat_tools.ts",
+    "ilab": "npm run build && npm run run-ts ./src/sdk/example_instruct_lab.ts",
+    "rerank": "npm run build && npm run npm run run-ts ./src/sdk/example_rerank.ts",
     "all": "npm run build && npm run text_generation && npm run embeddings && npm run chat",
     "all-ext": "npm run build && npm run all && npm run prompt_tuning",
     "test-install": "yalc add @ibm-cloud/watsonx-ai && npm install && npm install @langchain/community@latest @langchain/langgraph@latest",
-    "langchain-chat": "npm run build && run-ts ./src/external/langchain/chat_conversation.ts",
-    "langchain-chat-image": "npm run build && run-ts ./src/external/langchain/chat_image.ts",
-    "langchain-tools": "npm run build && run-ts ./src/external/langchain/chat_tools.ts",
-    "langchain-langgraph-tools": "npm run build && run-ts ./src/external/langchain/chat_langgraph.ts",
-    "langgraph-rag": "npm run build && run-ts ./src/external/langchain/rag_memory_vector_store.ts && run-ts ./src/external/langchain/rag_milvus.ts",
-    "langchain-rerank": "npm run build && run-ts ./src/external/langchain/rerank.ts",
-    "all-langchain": "npm run build && run-ts ./src/external/langchain/chat_conversation.ts && run-ts ./src/external/langchain/chat_image.ts && run-ts ./src/external/langchain/chat_tools.ts && run-ts ./src/external/langchain/call/chat_langgraph.ts",
-    "all-langchain-ext": "npm all-langchain && run-ts ./src/external/langchain/call/rag_memory_vector_store.ts && run-ts ./src/external/langchain/rag_milvus.ts",
+    "langchain-chat": "npm run build && npm run run-ts ./src/external/langchain/chat_conversation.ts",
+    "langchain-chat-image": "npm run build && npm run run-ts ./src/external/langchain/chat_image.ts",
+    "langchain-tools": "npm run build && npm run run-ts ./src/external/langchain/chat_tools.ts",
+    "langchain-langgraph-tools": "npm run build && npm run run-ts ./src/external/langchain/chat_langgraph.ts",
+    "langgraph-rag": "npm run build && npm run run-ts ./src/external/langchain/rag_memory_vector_store.ts && npm run run-ts ./src/external/langchain/rag_milvus.ts",
+    "langchain-rerank": "npm run build && npm run run-ts ./src/external/langchain/rerank.ts",
+    "all-langchain": "npm run build && npm run run-ts ./src/external/langchain/chat_conversation.ts && npm run run-ts ./src/external/langchain/chat_image.ts && npm run run-ts ./src/external/langchain/chat_tools.ts && npm run run-ts ./src/external/langchain/call/chat_langgraph.ts",
+    "all-langchain-ext": "npm all-langchain && npm run run-ts ./src/external/langchain/call/rag_memory_vector_store.ts && npm run run-ts ./src/external/langchain/rag_milvus.ts",
     "test-sdk": "npm run test-install && npm run build && npm test sdk.test.ts",
     "test-langchain": "npm run test-install && npm run build && npm test langchain.test.ts",
     "test-all": "npm run test-install && npm run build && npm test"
@@ -37,22 +37,23 @@
   },
   "dependencies": {
     "@ibm-cloud/watsonx-ai": "file:.yalc/@ibm-cloud/watsonx-ai",
-    "@langchain/community": "^0.3.46",
+    "@langchain/community": "^0.3.57",
     "@langchain/core": "^0.3.19",
-    "@langchain/langgraph": "^0.3.1",
+    "@langchain/langgraph": "^0.4.9",
     "@zilliz/milvus2-sdk-node": "^2.5.0",
     "axios": "^1.7.8",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "duck-duck-scrape": "^2.2.6",
     "langchain": "^0.3.26",
+    "papaparse": "^5.5.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/needle": "^3.3.0",
     "@types/node": "^22.9.0",
-    "csvtojson": "^2.0.10",
+    "@types/papaparse": "^5.3.16",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.31.0",
