--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,23 @@
 {
   "compilerOptions": {
     /* Basic Options */
-    "target": "es6", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
-    "module": "commonjs", /* Specify module code generation: 'none', commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
+    "target": "es6" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */,
+    "module": "commonjs" /* Specify module code generation: 'none', commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
     "resolveJsonModule": true,
-    "lib": [
-      "es6",
-      "es5",
-      "es2015",
-      "dom",
-      "scripthost"
-    ],
+    "lib": ["es6", "es5", "es2015", "dom", "scripthost"],
     "strict": true,
     /* Build source files into a folder called `dist` to maintain clean directories, free of ts-generated files */
     "outDir": "./dist",
     /* Specify library files to be included in the compilation:  */
-    "declaration": true, /* Generates corresponding '.d.ts' file. */
-    "sourceMap": true, /* Generates corresponding '.map' file. */
+    "declaration": true /* Generates corresponding '.d.ts' file. */,
+    "sourceMap": true /* Generates corresponding '.map' file. */,
     "declarationMap": true,
     /* Strict Type-Checking Options */
-    "alwaysStrict": true, /* Parse in strict mode and emit "use strict" for each source file. */
+    "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
     /* Module Resolution Options */
-    "moduleResolution": "node", /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "types": [
-      "node"
-    ], /* Type declaration files to be included in compilation. */
-    "esModuleInterop": true,
-    "paths": {
-      "@ibm-cloud/watsonx-ai": ["./index.ts"],
-      "@ibm-cloud/watsonx-ai/authentication": ["./auth/index.ts"]
-    }
+    "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
+    "types": ["node"] /* Type declaration files to be included in compilation. */,
+    "esModuleInterop": true
   },
   "exclude": ["./test/langchain", "./dist/**/*", "./examples/**/*"]
 }
